# distillanything

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/: train.eval.jsonl  train.jsonl
distillanything/: __init__.py  cli.py  config.py  hardware.py  loading.py  smoke.py  student.py  testing.py
distillanything/data/: __init__.py  filters.py  formats.py  generate.py  tokenize.py
distillanything/db/: __init__.py  store.py  sync.py
distillanything/eval/: __init__.py  benchmark.py  judge.py  report.py
distillanything/losses/: __init__.py  hidden.py  kd.py
distillanything/teachers/: __init__.py  api.py  base.py  local.py  registry.py
distillanything/train/: __init__.py  trainer.py
distillanything/ui/: __init__.py  jobs.py  runsource.py  security.py  server.py
distillanything/ui/static/: index.html
distillanything/ui/static/assets/: index-0cjS3uNW.css  index-BcdUobh4.js  index-ByD7mnTh.js  index-C6AJ0bIP.js  index-C7sjVTBx.css  index-C_TwQasf.js  index-CflD2PqD.css  index-CjlXYeP5.js  index-DSAGlscw.js  index-DuFrE4uL.js  index-j4Ir1SoG.js
examples/: 01_generate_dataset.py  02_train_student.py  03_evaluate_and_report.py  lora_notebook.ipynb  quickstart_mac.py  sample-report.md  sample_notebook.ipynb
examples/data/: seed_prompts.txt
recipes/: claude-blackbox.yaml  gpu-qlora.yaml  mac-hidden-kd.yaml  mac-lora.yaml  mac-small.yaml
tests/: test_config.py  test_data.py  test_db_sync.py  test_hidden.py  test_judge.py  test_lora.py  test_losses.py  test_report.py  test_trainer.py  test_ui_api.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  JobsDrawer.tsx  MetricChart.tsx  api.ts  components.tsx  theme.css  types.ts
web/src/pages/: ComparePage.tsx  DatasetsPage.tsx  NewRunPage.tsx  RemoteRunPage.tsx  RunDetailPage.tsx  RunsPage.tsx  SettingsPage.tsx
