[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "distill-anything"
version = "0.3.0"
description = "The open-source lifecycle framework for distilling any model: generate data from teachers, distill students, evaluate, and benchmark."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Distill Anything contributors" }]
keywords = ["distillation", "knowledge-distillation", "llm", "training", "synthetic-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2",
    "transformers>=4.44",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
api = ["anthropic>=0.40", "openai>=1.40"]
lora = ["peft>=0.11"]
qlora = ["peft>=0.11", "bitsandbytes>=0.43"]  # bitsandbytes is CUDA-only
ui = ["fastapi>=0.110", "uvicorn>=0.30"]
dev = ["pytest>=8.0", "ruff>=0.6", "peft>=0.11", "fastapi>=0.110", "uvicorn>=0.30", "httpx>=0.27"]

[project.scripts]
distill = "distillanything.cli:app"

[project.urls]
Homepage = "https://github.com/AIAnytime/distillanything"
Repository = "https://github.com/AIAnytime/distillanything"
Issues = "https://github.com/AIAnytime/distillanything/issues"

[tool.hatch.build.targets.wheel]
packages = ["distillanything"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.claude",
    "/.github",
    "/data",
    "/media",
    "/runs",
    "/startup.md",
    "/headroom_readme.md",
    "/web/node_modules",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
